--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.ak681443.ilovezappos.HomeActivity">
+    tools:context="com.ak681443.ilovezappos.activities.HomeActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
