[data-binding] data binding implemented

--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+<data>
+    <variable
+        name="product"
+        type="com.ak681443.ilovezappos.model.SearchResult"/>
+</data>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,3 +38,5 @@
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
+
+</layout>
