--- a/app/src/main/res/layout/content_product_page.xml
+++ b/app/src/main/res/layout/content_product_page.xml
@@ -1,3 +1,10 @@
+<layout>
+<data>
+    <variable
+        name="product"
+        type="com.ak681443.ilovezappos.model.SearchResult"/>
+</data>
+
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,6 +19,9 @@
         android:id="@+id/product_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:text="@{product.brandName}"
         />
 </fragment>
 
+
+</layout>
