--- a/app/src/main/res/menu/menu_product_page.xml
+++ b/app/src/main/res/menu/menu_product_page.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ak681443.ilovezappos.activities.ProductPageActivity">
     <item
-        android:id="@+id/action_settings"
+        android:icon="@drawable/shopping_cart"
+        android:id="@+id/action_add_to_cart"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_cart"
+        app:showAsAction="always" />
 </menu>
